modify css to fix button overlap and extra margin

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -427,6 +427,6 @@ input[type=submit] {
   background-color: rgba(211, 211, 211, .6);
   margin-left: 40px;
   margin-right: 40px;
-  margin-top: 60px;
+  clear: right;
 
 }
